<resources>
    <string name="app_name">Meals</string>
    <string name="today_s_meals">Today\'s Meals</string>
    <string name="existing_meals">Existing Meals</string>
    <string name="your_progress">Progress</string>
    <string name="your_profile">Profile</string>
    <string name="title_1">Today\'s Meals</string>
    <string name="title_2">Existing Meals</string>
    <string name="title_4">Profile</string>
    <string name="weekly">Weekly Progress</string>
    <string name="today">Today\'s Progress</string>
    <string name="monthly">Monthly Progress</string>
    <string name="intro_1">Hi,\n\nThanks for using\nour app to organize\nyour daily eating habits!\n\n\nTo start, please let us calculate your daily calorie needs based on few questions.</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="calculator">Calculator</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="activity">Activity:</string>
    <string name="goal">Goal:</string>
    <string name="diet_type">Diet Type:</string>
    <string name="calculate">Calculate</string>
    <string name="example_1">eg. 18 (15 – 80)</string>
    <string name="example_height_1">eg. 160cm</string>
    <string name="example_height_2">eg. 5.6ft</string>
    <string name="example_weight_1">eg. 75kg</string>
    <string name="example_weight_2">eg. 165lbs</string>
    <string name="left_to_go">calories left to go!</string>
    <string name="protein">PROTEIN</string>
    <string name="carbs">CARBS</string>
    <string name="fat">FAT</string>
    <string name="calculate_new">Calculate new daily calorie needs</string>
    <string name="calorie_need">Daily calories:</string>
    <string name="carbs_need">Daily carbohydrates:</string>
    <string name="protein_need">Daily protein:</string>
    <string name="fat_need">Daily fat:</string>
    <string name="add_meal">Add meal</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="total">Total</string>
    <string name="calories">Calories:</string>
    <string name="carbs_low">Carbohydrates:</string>
    <string name="protein_low">Protein:</string>
    <string name="fat_low">Fat:</string>
    <string name="ingredients">Ingredients</string>
    <string name="example_carbs">Carbs</string>
    <string name="example_protein">Protein</string>
    <string name="example_fat">Fat</string>
    <string name="add_meal_to_existing_meals">Add meal to existing meals for future use</string>

    <string-array name="spinner_items">
        <item>Calories</item>
        <item>Carbohydrates</item>
        <item>Protein</item>
        <item>Fat</item>
    </string-array>

</resources>
