<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activities.CalculatorActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/round_title"
        android:orientation="horizontal"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calculator_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textColor="@color/colorTextPrimary"
        android:textSize="28sp"
        android:background="@drawable/round_text_view"
        android:layout_margin="10dp"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/calculator_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/round_text_view"
        >
        <Switch
            android:id="@+id/metric_or_not"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_metric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metric"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toStartOf="@+id/metric_or_not"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_imperial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imperial"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/metric_or_not"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/male_or_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/metric_or_not"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/text_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toStartOf="@+id/male_or_female"
            app:layout_constraintTop_toBottomOf="@+id/metric_or_not"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/text_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toEndOf="@+id/male_or_female"
            app:layout_constraintTop_toBottomOf="@+id/metric_or_not"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/constraint_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/round_text_view">

        <TextView
            android:id="@+id/text_age"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/age"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/age"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/example_1"
            android:inputType="number"
            android:lines="1"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_age"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_height"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/height"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_age" />

        <EditText
            android:id="@+id/height"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:lines="1"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_age"
            app:layout_constraintTop_toBottomOf="@id/age" />

        <TextView
            android:id="@+id/text_weight"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/weight"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_height" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:lines="1"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_age"
            app:layout_constraintTop_toBottomOf="@id/height" />

        <TextView
            android:id="@+id/text_activity"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/activity"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_weight" />

        <Spinner
            android:id="@+id/activity"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/colorTextPrimary"
            android:dropDownWidth="235dp"
            android:popupBackground="@color/colorBackgroundLight"
            android:popupElevation="5dp"
            android:spinnerMode="dropdown"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_activity"
            app:layout_constraintTop_toBottomOf="@id/weight" />

        <TextView
            android:id="@+id/text_goal"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/goal"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_activity" />

        <Spinner
            android:id="@+id/goal"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/colorTextPrimary"
            android:dropDownWidth="235dp"
            android:popupBackground="@color/colorBackgroundLight"
            android:popupElevation="5dp"
            android:spinnerMode="dropdown"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_goal"
            app:layout_constraintTop_toBottomOf="@id/activity" />

        <TextView
            android:id="@+id/text_diet"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/diet_type"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_goal"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Spinner
            android:id="@+id/diet"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/colorTextPrimary"
            android:dropDownWidth="235dp"
            android:popupBackground="@color/colorBackgroundLight"
            android:popupElevation="5dp"
            android:spinnerMode="dropdown"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_diet"
            app:layout_constraintTop_toBottomOf="@id/goal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/calculate"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_text_view"
        android:text="@string/calculate"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/cancel"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_text_view"
        android:text="@string/cancel"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>