<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_meal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activities.AddMealActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/background_4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.5"
        android:background="@drawable/round_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal" />

    <EditText
        android:id="@+id/title_add_meal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_text_view"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/title"
        android:lines="1"
        android:inputType="text"
        android:textColorHint="@color/colorTextPrimary"
        android:textColor="@color/colorTextPrimary"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_not_dropped"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_text_view"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title_add_meal">

        <TextView
            android:id="@+id/total_text_2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/total"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/total_drop_down"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_total_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_dropped"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/round_text_view"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title_add_meal"
        >

        <TextView
            android:id="@+id/total_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/total"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/total_drop_up"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_total_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/calories_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_text" />

        <TextView
            android:id="@+id/carbs_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/carbs_low"
            android:textColor="@color/colorTextPrimary"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calories_text" />

        <TextView
            android:id="@+id/protein_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/protein_low"
            android:textColor="@color/colorTextPrimary"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carbs_text" />

        <TextView
            android:id="@+id/fat_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/fat_low"
            android:textColor="@color/colorTextPrimary"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/protein_text" />

        <TextView
            android:id="@+id/calories"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="22sp"
            android:gravity="right"
            app:layout_constraintStart_toEndOf="@+id/calories_text"
            app:layout_constraintTop_toBottomOf="@+id/total_text" />

        <TextView
            android:id="@+id/carbs"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:textSize="22sp"
            android:gravity="right"
            app:layout_constraintStart_toEndOf="@+id/carbs_text"
            app:layout_constraintTop_toBottomOf="@+id/calories_text" />

        <TextView
            android:id="@+id/protein"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:textSize="22sp"
            android:gravity="right"
            app:layout_constraintStart_toEndOf="@+id/protein_text"
            app:layout_constraintTop_toBottomOf="@+id/carbs_text" />

        <TextView
            android:id="@+id/fat"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:textSize="22sp"
            android:gravity="right"
            app:layout_constraintStart_toEndOf="@+id/fat_text"
            app:layout_constraintTop_toBottomOf="@+id/protein_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/items_layout"
        android:background="@drawable/round_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_dropped"
        app:layout_constraintBottom_toTopOf="@+id/checkbox"
        >
        <TextView
            android:id="@+id/ingredients_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/ingredients_text"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@null"
            >

            <LinearLayout
                android:id="@+id/parent_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/separator_constraint_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <View
                        android:id="@+id/separator3"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:onClick="onAddField"
                        android:background="@drawable/ic_add_todays_meal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/separator3" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/add_meal"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_text_view"
        android:text="@string/add"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/cancel_meal"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_text_view"
        android:text="@string/cancel"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:buttonTint="@color/colorTextPrimary"
        android:text="@string/add_meal_to_existing_meals"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toTopOf="@+id/cancel_meal"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>