<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_item_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <EditText
        android:id="@+id/ingredient_title"
        android:layout_width="233dp"
        android:layout_height="40dp"
        android:hint="@string/title"
        android:inputType="text"
        android:background="@null"
        android:backgroundTint="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextPrimary"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/ingredient_carbs"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:hint="@string/example_carbs"
        android:inputType="number"
        android:gravity="left"
        android:background="@null"
        android:backgroundTint="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextPrimary"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_title"
        />

    <EditText
        android:id="@+id/ingredient_protein"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:background="@null"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/colorTextPrimary"
        android:hint="@string/example_protein"
        android:inputType="number"
        android:gravity="center_horizontal"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextPrimary"
        app:layout_constraintStart_toEndOf="@+id/vertical_sep_1"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_title" />

    <EditText
        android:id="@+id/ingredient_fat"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:background="@null"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/colorTextPrimary"
        android:hint="@string/example_fat"
        android:inputType="number"
        android:gravity="center_horizontal"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextPrimary"
        app:layout_constraintStart_toEndOf="@+id/vertical_sep_2"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_title" />

    <Button
        android:id="@+id/delete_card"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_delete"
        android:onClick="onDeleteField"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ingredient_title"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vertical_sep_1"
        android:layout_width="1dp"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/ingredient_carbs"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_title" />

    <View
        android:id="@+id/vertical_sep_2"
        android:layout_width="1dp"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/ingredient_protein"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_title" />

    <View
        android:id="@+id/separator4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_fat"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
